<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu_buttons"
    android:background="#80000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/container_textos_itens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/container_audios_itens"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floating_fling_textos_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            android:contentDescription="@string/fling_fab_description"
            app:backgroundTint="@android:color/white"
            android:src="@drawable/ic_filtro_texto"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/fab_menu_items_distance"
            android:layout_marginRight="@dimen/fab_margin_right"
            android:layout_marginEnd="@dimen/fab_margin_right"
            android:scaleType="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_view_menu_textos"
            android:text="@string/fab_menu_textos"
            android:textSize="@dimen/texto_fab_menu_itens"
            android:textColor="@android:color/white"
            android:layout_marginRight="@dimen/texto_para_fab_margin"
            android:layout_marginEnd="@dimen/texto_para_fab_margin"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/floating_fling_textos_item"
            android:layout_toStartOf="@+id/floating_fling_textos_item" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/container_videos_itens"
        android:id="@+id/container_audios_itens"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floating_fling_audios_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            android:contentDescription="@string/fling_fab_description"
            app:backgroundTint="@android:color/white"
            android:src="@drawable/ic_filtro_audio"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/fab_menu_items_distance"
            android:layout_marginRight="@dimen/fab_margin_right"
            android:layout_marginEnd="@dimen/fab_margin_right"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:scaleType="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_view_menu_audios"
            android:text="@string/fab_menu_audios"
            android:textSize="@dimen/texto_fab_menu_itens"
            android:textColor="@android:color/white"
            android:layout_marginRight="@dimen/texto_para_fab_margin"
            android:layout_marginEnd="@dimen/texto_para_fab_margin"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/floating_fling_audios_item"
            android:layout_toStartOf="@+id/floating_fling_audios_item" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/container_videos_itens"
        android:layout_above="@+id/container_imagens_itens"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floating_fling_videos_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            android:contentDescription="@string/fling_fab_description"
            app:backgroundTint="@android:color/white"
            android:src="@drawable/ic_filtro_video"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/fab_menu_items_distance"
            android:layout_marginRight="@dimen/fab_margin_right"
            android:layout_marginEnd="@dimen/fab_margin_right"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:scaleType="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_view_menu_videos"
            android:text="@string/fab_menu_videos"
            android:textSize="@dimen/texto_fab_menu_itens"
            android:textColor="@android:color/white"
            android:layout_marginRight="@dimen/texto_para_fab_margin"
            android:layout_marginEnd="@dimen/texto_para_fab_margin"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/floating_fling_videos_item"
            android:layout_toStartOf="@+id/floating_fling_videos_item" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/container_imagens_itens"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/floating_fling_root_item"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floating_fling_imagens_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            android:contentDescription="@string/fling_fab_description"
            app:backgroundTint="@android:color/white"
            android:src="@drawable/ic_filtro_image"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/fab_menu_items_distance"
            android:layout_marginRight="@dimen/fab_margin_right"
            android:layout_marginEnd="@dimen/fab_margin_right"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:scaleType="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_view_menu_imagens"
            android:text="@string/fab_menu_imagens"
            android:textSize="@dimen/texto_fab_menu_itens"
            android:textColor="@android:color/white"
            android:layout_marginRight="@dimen/texto_para_fab_margin"
            android:layout_marginEnd="@dimen/texto_para_fab_margin"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/floating_fling_imagens_item"
            android:layout_toStartOf="@+id/floating_fling_imagens_item" />

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floating_fling_root_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fling_fab_description"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/acervo_remoto_primary"
        android:layout_marginStart="@dimen/fab_principal_margin"
        android:layout_marginEnd="@dimen/fab_principal_margin"
        android:layout_marginBottom="@dimen/fab_principal_margin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
